refactor(docs): dto record 변경 및 request response 분리